# maven-mcp

./: .gitignore  Cargo.toml  README.md  manifest.json
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/maven/: client.rs  metadata.rs  mod.rs
src/models/: coordinate.rs  mod.rs  version.rs
src/tools/: mod.rs  responses.rs  service.rs
